# pygeoogc

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  conftest.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bugreport.yml
.github/workflows/: pre-commit.yml  python-publish.yml  release.yml  test.yml
ci/requirements/: environment-dev.yml  environment.yml  py3.6.yml  py3.7.yml  py3.8.yml  py3.9.yml
docs/: conf.py  modules.rst  pygeoogc.rst
pygeoogc/: __init__.py  async_requests.py  cache_keys.py  core.py  exceptions.py  print_versions.py  pygeoogc.py  utils.py
pygeoogc/static/: urls.yml
src/pygeoogc/: __init__.py  cache_keys.py  core.py  exceptions.py  pygeoogc.py  utils.py
tests/: test_exceptions.py  test_pygeoogc.py
