[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[project]
name = "pygeoogc"
description = "An interface to ArcGIS RESTful-, WFS-, and WMS-based services."
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Taher Chegini", email = "cheginit@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "async-retriever<0.16,>=0.15.2",
  "cytoolz",
  "defusedxml",
  "joblib",
  "multidict",
  "owslib>=0.27.2",
  "pyproj>=3.0.1",
  "requests",
  "requests-cache>=0.9.6",
  "shapely>=1.8.5",
  "ujson",
  "url-normalize>=1.4",
  "urllib3",
  "yarl",
]
[project.optional-dependencies]
test = [
  "coverage[toml]",
  "pandas",
  "pytest-cov",
  "pytest-xdist[psutil]",
]
[project.urls]
CI = "https://github.com/hyriver/pygeoogc/actions"
Changelog = "https://docs.hyriver.io/changelogs/pygeoogc.html"
Homepage = "https://docs.hyriver.io/readme/pygeoogc.html"
Issues = "https://github.com/hyriver/pygeoogc/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
pygeoogc = ["py.typed"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
fallback_version = "999"

[tool.black]
line-length = 100

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "pygeoogc"
line_length = 100
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pytest.ini_options]
addopts = '--ignore=noxfile.py -n=auto -v --cov=pygeoogc --cov-report xml --durations=5'
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
filterwarnings = [
  "ignore:.*distutils.*",
  "ignore:.*--rsyncdir command line argument.*",
  "ignore:.*numpy.ndarray size changed.*",
  "ignore:.*'cgi' is deprecated.*",
]
testpaths = [
  "tests",
  "pygeoogc"
]

[tool.coverage.report]
exclude_lines = [
  'raise ServiceUnavailableError',
  "if TYPE_CHECKING:"
]
ignore_errors = true

[tool.coverage.run]
branch = true
omit = [
  "**/__init__.py",
  "**/print_versions.py"
]
parallel = true
source = ['pygeoogc']

[tool.bandit]
targets = [
  "pygeoogc"
]

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox"

[tool.pycln]
all = true
expand_stars = true
no_gitignore = false
verbose = true

[tool.pyright]
exclude = [
  ".nox/",
  "**/__pycache__",
  "**/__init__.py",
  "tests/"
]
include = ["pygeoogc"]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
typeCheckingMode = "strict"

[tool.refurb]
python_version = "3.8"
quiet = true
