[metadata]
name = pygeoogc
description = An interface to ArcGIS RESTful-, WFS-, and WMS-based services.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hyriver/pygeoogc
author = Taher Chegini
author_email = cheginit@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Typing :: Typed
project_urls =
    Homepage = https://docs.hyriver.io/readme/pygeoogc.html
    Issues = https://github.com/hyriver/pygeoogc/issues
    CI = https://github.com/hyriver/pygeoogc/actions
    Changelog = https://docs.hyriver.io/changelogs/pygeoogc.html

[options]
packages = find:
install_requires =
    async-retriever>=0.3.5
    cytoolz
    defusedxml
    joblib
    loguru
    multidict
    owslib>=0.27.2
    pyproj>=2.2
    pyyaml
    requests
    requests-cache>=0.9.6
    shapely>=1.8
    url-normalize>=1.4
    urllib3
    yarl
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    coverage[toml]
    pandas
    pytest-cov
    pytest-xdist[psutil]
typeguard =
    coverage[toml]
    pandas
    pygments
    pytest-cov
    pytest-xdist[psutil]
    typeguard

[options.package_data]
pygeoogc =
    py.typed

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503
    D107
    D105
exclude =
    .eggs
    __init__.py
    .ipynb_checkpoints
    .nox
    tests/*.py
    noxfile.py

[darglint]
strictness = short
docstring_style = numpy
ignore = DAR401,DAR103
ignore_regex = ^_(.*)

[codespell]
skip = __pycache__,_build,.mypy_cache,.git,./htmlcov,.nox
